Add feature generator interfaces split off training and model loading / predicting